--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,5 +38,6 @@ articles:
 <script>
   {%- include scripts/home.js -%}
 </script>
+<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/186230858&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
 {{ content }}
